--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,20 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <compiler.version>1.8</compiler.version>
-        <jackson.version>2.9.8</jackson.version>
+        <compiler.plugin.version>3.8.1</compiler.plugin.version>
+        <compiler.version>11</compiler.version>
+        <jackson.version>2.13.0</jackson.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <lombok.version>1.16.20</lombok.version>
-        <testng.version>6.14.3</testng.version>
-        <jsonpath.version>2.2.0</jsonpath.version>
-        <rest_assured.version>2.9.0</rest_assured.version>
+        <lombok.version>1.18.22</lombok.version>
+        <testng.version>7.4.0</testng.version>
+        <jsonpath.version>2.6.0</jsonpath.version>
+        <rest_assured.version>4.4.0</rest_assured.version>
         <slf4j.version>1.7.25</slf4j.version>
         <surfire.plugin.version>2.20</surfire.plugin.version>
+        <spring.version>5.3.12</spring.version>
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
@@ -31,16 +31,26 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.jayway.jsonpath/json-path -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <version>${jsonpath.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
         <dependency>
-            <groupId>com.jayway.restassured</groupId>
+            <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>${rest_assured.version}</version>
         </dependency>
@@ -70,14 +80,12 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -103,7 +111,7 @@
                     <configuration>
                         <systemPropertyVariables>
                             <buildDirectory>${project.build.directory}</buildDirectory>
-                            <baseUrl>http://petstore.swagger.io/v2/</baseUrl>
+                            <baseUrl>https://petstore.swagger.io/v2/</baseUrl>
                         </systemPropertyVariables>
                         <testFailureIgnore>true</testFailureIgnore>
                         <includes>
